media/catScratch.css
body {
	justify-content: center;
	align-items: center;
	margin: 1em 2em;
	/* background-image: url(./sand.jpg); */
	background-repeat: repeat;
	margin: 0;
	padding: 0;
}
:root{
	--input-margin-vertical:0;
}

body.vscode-dark {
	/* background-image: url(./sand-dark.jpg); */
}

.hidden-assets {
	max-height: 0;	
	overflow: hidden;
	background-color: yellow;
}
.app{
	display: flex;
	width: 100vw;
	height: 100vh;
}
.editor-area{
	flex-grow: 1;
	padding: 10px 20px;
}
.editor-area canvas {
	cursor: crosshair;
}
.anims {
	height: 100vh;
	overflow: auto;
	padding: 10px;
}
.minimap-shadow{
	height: 100vh;
	box-shadow: #000000 -6px 0 6px -6px inset;
	width: 6px;
}
.anims .sprite {
	padding: 4px;
	background: black;
	margin-bottom: 5px;
	cursor: pointer;
}

/* TOOLBOX */
.toolbox {
	background-color: var(--vscode-dropdown-background);
	padding: 4px;
	margin-bottom: 1em;
    font-size: 12px;
    display: inline-flex;
	margin-right: 6px;
}
.toolbox > * {
	min-width: 22px;
    height: 22px;
    padding: 3px 5px;
    border-radius: 5px;
    flex: initial;
    margin-left: 3px;
    /* background-position: 50%; */
    /* background-repeat: no-repeat; */
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
}
.toolbox > .active {
	background-color: var(--vscode-inputOption-activeBorder);
	color: white;
}
.toolbox > *:hover {
	background-color: var(--vscode-inputOption-hoverBackground);
}
/* .pencil {color:#444;} */
/* .pencil.on {color:red;} */
.pencil::before {
	content: '';
	width: 11px;
	height: 11px;
	background: currentColor;
	border-radius: 50%;
	display: inline-block;
	margin-right: 5px;
}
.pencil.on::before {background-color:var(--vscode-foreground);}
.pencil.off::before {background-color:black;}

.note:hover .delete-button {
	display: block;
}

